errorlogs/1516414406154-AWWC_final_pdf - Copy.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
247 INFO: PyInstaller: 3.3.1
248 INFO: Python: 3.4.4
248 INFO: Platform: Windows-XP-5.1.2600-SP3
250 INFO: wrote Z:\p2e\AWWC_final_pdf - Copy.spec
261 INFO: UPX is not available.
262 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
277 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516414406154', 'Z:\\p2e']
278 INFO: checking Analysis
278 INFO: Building Analysis because out00-Analysis.toc is non existent
279 INFO: Initializing module dependency graph...
294 INFO: Initializing module graph hooks...
301 INFO: Analyzing base_library.zip ...
6818 INFO: Processing pre-find module path hook   distutils
10069 INFO: running Analysis out00-Analysis.toc
10552 INFO: Caching module hooks...
10566 INFO: Analyzing Z:\p2e\workingdir\1516414406154\AWWC_final_pdf - Copy.py

Syntax error in Z:\p2e\workingdir\1516414406154\AWWC_final_pdf - Copy.py
  File "Z:\p2e\workingdir\1516414406154\AWWC_final_pdf - Copy.py", line 4
     print "Please Install pythoncom and pyHook modules"
                                                       ^
 SyntaxError: Missing parentheses in call to 'print'

